--- a/modules/gui/qt/vlc.qrc
+++ b/modules/gui/qt/vlc.qrc
@@ -169,7 +169,7 @@
         <file alias="ToolTipArea.qml">qml/utils/ToolTipArea.qml</file>
     </qresource>
     <qresource prefix="/mediacenter">
-        <file alias="MCDisplay.qml">qml/mediacenter/MCDisplay.qml</file>
+        <file alias="MCMusicDisplay.qml">qml/mediacenter/MCMusicDisplay.qml</file>
         <file alias="Presentation.qml">qml/mediacenter/Presentation.qml</file>
         <file alias="MusicAlbumsDisplay.qml">qml/mediacenter/MusicAlbumsDisplay.qml</file>
         <file alias="MusicAlbumsGridExpandDelegate.qml">qml/mediacenter/MusicAlbumsGridExpandDelegate.qml</file>
