qml: add simple playlist view

--- a/modules/gui/qt/vlc.qrc
+++ b/modules/gui/qt/vlc.qrc
@@ -192,4 +192,10 @@
         <file alias="VLCStyle.qml">qml/style/VLCStyle.qml</file>
         <file alias="VLCColors.qml">qml/style/VLCColors.qml</file>
     </qresource>
+    <qresource prefix="/playlist">
+        <file alias="PLItem.qml">qml/playlist/PLItem.qml</file>
+        <file alias="PlaylistListView.qml">qml/playlist/PlaylistListView.qml</file>
+        <file alias="PlaylistMenu.qml">qml/playlist/PlaylistMenu.qml</file>
+        <file alias="PLItemFooter.qml">qml/playlist/PLItemFooter.qml</file>
+    </qresource>
 </RCC>
