--- a/modules/gui/qt/vlc.qrc
+++ b/modules/gui/qt/vlc.qrc
@@ -169,6 +169,8 @@
         <file alias="KeyNavigableListView.qml">qml/utils/KeyNavigableListView.qml</file>
         <file alias="ToolTipArea.qml">qml/utils/ToolTipArea.qml</file>
         <file alias="DNDLabel.qml">qml/utils/DNDLabel.qml</file>
+        <file alias="qmldir">qml/utils/qmldir</file>
+        <file alias="KeyNavigableTableView.qml">qml/utils/KeyNavigableTableView.qml</file>
     </qresource>
     <qresource prefix="/mediacenter">
         <file alias="MCMusicDisplay.qml">qml/mediacenter/MCMusicDisplay.qml</file>
